policy/nginx-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nginx-policy
  namespace: withlin-test
spec:
  endpointSelector:
    matchLabels:
      app: nginx
  ingress:
    - fromEntities:
        - all
    - fromEndpoints:
        - {}
    - fromEndpoints:
        - matchLabels:
            app: nginx
  egress:
    - toEndpoints:
        - {}
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchPattern: "*.baidu.com"
